--- a/css/main.css
+++ b/css/main.css
@@ -319,7 +319,7 @@ textarea.input100 {
   top: -1px;
   left: -1px;
   pointer-events: none;
-  border: 1px solid #00ad5f;
+  border: 1px solid blue;
 
   visibility: hidden;
   opacity: 0;
@@ -375,7 +375,7 @@ textarea.input100 {
   min-width: 200px;
   height: 50px;
   border-radius: 2px;
-  background: #00ad5f;
+  background: blue;
 
   font-family: Montserrat-Bold;
   font-size: 12px;
